# Brain-JEPA

./: .gitignore  README.md  downstream_eval.py  generate_hcp_parc.py  preprocess_hcp_data.py  pyproject.toml
configs/: default_hcp_parc.yaml
downstream_tasks/: engine_finetune.py  main_finetune.py  main_linprobe.py  main_probe.py  models_probe.py  models_vit.py
downstream_tasks/config/: default_probe.yaml
downstream_tasks/util/: misc.py
scripts/classification/: run_downstream_FT_hca_sex.sh  run_downstream_LP_hca_sex.sh  run_downstream_LP_hcya_sex.sh
src/datasets/: hca_sex_datasets.py  hcya_sex_datasets.py  s3_utils.py
src/models/: vision_transformer.py
